# personal-blog

./: .firebaserc  .gitignore  LICENSE  firebase.json  pelicanconf.py  publishconf.py  pyproject.toml  tasks.py
.github/workflows/: deploy-preview.yml  deploy-prod.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
content/: first-post.md  keyboard-review.md
contrib/themes/flex/: .gitrepo
personal_blog/: pelican_config.py  publish_config.py
