[tool.poetry]
name = "vladimir-shteyn-personal-blog"
version = "0.1.0"
description = "Vladimir Shteyn's personal blog"
authors = ["mistervladimir <vladimir@shteyn.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "personal_blog"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pelican = {extras = ["markdown"], version = "^4.8.0"}
invoke = "^1.7.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
livereload = "^2.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
